--- a/collections/Aerolíneas.postman_collection.json
+++ b/collections/Aerolíneas.postman_collection.json
@@ -133,7 +133,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\n    \"name\":\"Prueba\",\n    \"description\":\"900\",\n    \"foundation\":\"2020-12-01\",\n    \"website\":\"prueba.test\"\n}",
+					"raw": "{\n    \"name\":\"Prueba\",\n    \"description\":\"900\",\n    \"foundation\":\"2020/02/24\",\n    \"website\":\"prueba.test\"\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -152,7 +152,70 @@
 					]
 				}
 			},
-			"response": []
+			"response": [
+				{
+					"name": "Crear una aerolínea inválida",
+					"originalRequest": {
+						"method": "POST",
+						"header": [],
+						"body": {
+							"mode": "raw",
+							"raw": "{\n    \"name\":\"Prueba\",\n    \"description\":\"900\",\n    \"foundation\":\"2020/02/24\",\n    \"website\":\"prueba.test\"\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{host}}:{{port}}/{{prefix}}/airlines",
+							"host": [
+								"{{host}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"{{prefix}}",
+								"airlines"
+							]
+						}
+					},
+					"status": "Bad Request",
+					"code": 400,
+					"_postman_previewlanguage": "json",
+					"header": [
+						{
+							"key": "X-Powered-By",
+							"value": "Express"
+						},
+						{
+							"key": "Content-Type",
+							"value": "application/json; charset=utf-8"
+						},
+						{
+							"key": "Content-Length",
+							"value": "102"
+						},
+						{
+							"key": "ETag",
+							"value": "W/\"66-6HxKJ+zSW9U0KGE+kKt5FkSyvds\""
+						},
+						{
+							"key": "Date",
+							"value": "Sun, 18 Sep 2022 21:08:14 GMT"
+						},
+						{
+							"key": "Connection",
+							"value": "keep-alive"
+						},
+						{
+							"key": "Keep-Alive",
+							"value": "timeout=5"
+						}
+					],
+					"cookie": [],
+					"body": "{\n    \"statusCode\": 400,\n    \"message\": [\n        \"foundation must be a valid ISO 8601 date string\"\n    ],\n    \"error\": \"Bad Request\"\n}"
+				}
+			]
 		},
 		{
 			"name": "Obtener todas las aerolíneas",
